--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-photo-view": "^1.2.2",
-    "react-screen-capture": "^1.0.1"
+    "react-router-dom": "^6.4.1",
+    "react-screen-capture": "^1.0.1",
+    "read-excel-file": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
