--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^0.27.2",
+    "dom-to-image": "^2.6.0",
     "html-to-image": "^1.10.8",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
@@ -21,6 +23,7 @@
     "read-excel-file": "^5.5.0"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
