--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^0.27.2",
     "copy-image-clipboard": "^2.1.2",
     "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.10.8",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
