--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@types/file-saver": "^2.0.5",
     "axios": "^0.27.2",
     "copy-image-clipboard": "^2.1.2",
     "dom-to-image": "^2.6.0",
