--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-image-file-resizer": "^0.4.8",
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.1",
     "react-screen-capture": "^1.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "react-toastify": "^9.0.8",
     "read-excel-file": "^5.5.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.0",
     "@types/dom-to-image": "^2.6.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
